feature 首页模板优化

--- a/web/src/pages/home/less/antMotionStyle.less
+++ b/web/src/pages/home/less/antMotionStyle.less
@@ -2,13 +2,13 @@
   @import './common.less';
   @import './custom.less';
   @import './content.less';
-  @import './nav3.less';
-  @import './banner5.less';
-  @import './feature6.less';
-  @import './feature7.less';
-  @import './feature0.less';
-  @import './feature8.less';
-  @import './footer1.less';
+  @import './nav0.less';
+  @import './banner1.less';
+  @import './teams0.less';
+  @import './teams3.less';
+  @import './content1.less';
+  @import './content3.less';
+  @import './content5.less';
+  @import './footer0.less';
   @import './edit.less';
 }
-
